PINN for optics (eikonal in a GRIN medium)

--- a/PINN_for_optics_eikonal.ipynb
+++ b/PINN_for_optics_eikonal.ipynb
@@ -380,7 +380,7 @@
         "id": "jZTl8eNu_CEV"
       },
       "source": [
-        "# Runge Kutta (for comparison)"
+        "# Runge Kutta"
       ]
     },
     {
@@ -421,7 +421,6 @@
         "  dy2_dz2 = -(g**2)*x_sol[1]/np.real(cmath.sqrt(1-(g**2*(x_sol[0]**2+x_sol[1]**2))))\n",
         "  return np.array([dx_dz, dy_dz,dx2_dz2, dy2_dz2])\n",
         "\n",
-        "\n",
         "def generate_data(n_steps,tmax,init_cond,batch_size):\n",
         "  data=[]\n",
         "  targets=[]\n",
@@ -444,11 +443,11 @@
       "outputs": [],
       "source": [
         "#Definition of the Analytical solution, with its parameters\n",
-        "L=zmax     # Igual que en entrenamiento funciona\n",
-        "n_steps=500 # Número de z's\n",
+        "L=zmax      # Equal domain that for training\n",
+        "n_steps=500 # Number of points in the domain\n",
         "\n",
         "#Initial conditions of space and solution\n",
-        "x_inicial,y_inicial=x0 # Defined in Run the PINN\n",
+        "x_inicial,y_inicial=x0                 # Defined in Run the PINN\n",
         "x_prime_inicial,y_prime_inicial=dx_dz0 # Defined in Run the PINN"
       ]
     },
@@ -516,17 +515,15 @@
       ],
       "source": [
         "def PathRay(z,r_o=0.5,r_1=-0.8,g=0.25):\n",
-        "    # Periodo = 2*pi/g\n",
+        "    # Period = 2*pi/g\n",
         "    return r_o*np.cos(g*z)+r_1*np.sin(g*z)/g\n",
         "\n",
         "z=np.linspace(0,L,n_steps)\n",
         "z=np.reshape(z,(n_steps,1))\n",
-        "print(z.shape)\n",
         "\n",
         "print('g=',g)\n",
         "r_o=np.sqrt(x_inicial**2+y_inicial**2)\n",
-        "r=PathRay(z,r_o=r_o,r_1=x_prime_inicial,g=g)\n",
-        "print(r.shape)\n"
+        "r=PathRay(z,r_o=r_o,r_1=x_prime_inicial,g=g)"
       ]
     },
     {
