PINN for optics (eikonal in a GRIN medium)

--- a/PINN_for_optics_eikonal.ipynb
+++ b/PINN_for_optics_eikonal.ipynb
@@ -22,7 +22,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "+ This notebook has been implemented by Paula Robredo Mexía <775198@unizar> and Sergio Gutiérrez Rodrigo <sergut@unizar.es> as part of a Final Degree Thesis at the University of Zaragoza, 2023.\n",
+        "+ This notebook has been implemented by Paula Robredo Mexía <775198@unizar.es> and Sergio Gutiérrez Rodrigo <sergut@unizar.es> as part of a Final Degree Thesis at the University of Zaragoza, 2023.\n",
         "+ The code builds upon the 2nd-order ODE implementation using Physics-Informed Neural Networks (PINNs) done by Luis Medrano Navarro, Luis Martin Moreno and Sergio G Rodrigo ([Solving differential equations in physics with Deep Learning: a beginner’s guide](https://arxiv.org/abs/2307.11237))."
       ],
       "metadata": {
@@ -128,7 +128,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "8wjwSqRq4SdL"
       },
@@ -157,7 +157,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "QaEzHv-WMkai"
       },
@@ -343,7 +343,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "LbE6fSRPHXWX",
         "colab": {
@@ -385,7 +385,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "ksvKmuhT4Y6-"
       },
@@ -407,7 +407,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "5jgJTEqN6VAi"
       },
@@ -436,7 +436,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "BkaTTw0K6Jwx"
       },
@@ -453,7 +453,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "fVt7nPWD4Rv6",
         "colab": {
@@ -494,7 +494,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "q6od_6PN-g9d",
         "colab": {
@@ -537,7 +537,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "id": "tzQYcRWX-yuk",
         "colab": {
@@ -570,7 +570,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "id": "oOcm6IgH9bXm",
         "colab": {
@@ -636,7 +636,7 @@
         "id": "-kI2En46s0fM",
         "outputId": "e08577bc-c9e8-4d78-e9b9-01d1e071f6b3"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
